fix(frontend productspage component): added missing padding

--- a/client/src/page-components/ProductsPage/index.css
+++ b/client/src/page-components/ProductsPage/index.css
@@ -2,8 +2,7 @@
   min-height: calc(100vh - 104.1px);
   display: flex;
   justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 #products-menu-container {
